# bwi_orchestration

./: .gitignore  LICENSE  README.md
BWI-Orc/: .project  Patrol.orc  WebSocket-test.orc  rosbridge-test.orc  rosbridge.inc
bwi_gateway_tests/: CMakeLists.txt  package.xml
bwi_gateway_tests/launch/: fixed_gateway.launch  gateway.launch
bwi_multimaster_tests/: CMakeLists.txt  package.xml
bwi_multimaster_tests/config/: robot1.rviz  simulated_concert.rosinstall
bwi_multimaster_tests/launch/: environment.launch  fixed_gateway.launch  gazebo.launch  orchestrator.launch  simulated_multimaster.concert  simulated_segbot1.launch  simulated_segbot2.launch  simulated_segbot3.launch  simulated_segbot4.launch  zeroconf_gateway.launch
bwi_multimaster_tests/params/: gazebo.yaml  simulated_segbot.rapps
bwi_orchestration/: CMakeLists.txt  package.xml
bwi_orchestration/launch/: environment.launch  gazebo.launch  segbot.launch  simulated_door_handler.launch  simulated_multimaster.concert  simulated_segbot1.launch  simulated_segbot2.launch  simulated_segbot3.launch  simulated_segbot4.launch
bwi_orchestration/params/: gazebo.yaml  simulated_door_handler.rapps  simulated_segbot.rapps
bwi_orchestration_maps/: CMakeLists.txt  package.xml
bwi_orchestration_maps/Media/models/: 3nex4.dae
bwi_orchestration_maps/config/: doors.yaml
bwi_orchestration_maps/launch/: 3nex4.launch  3nex4_map_server.launch
bwi_orchestration_maps/maps/: 3ne.pgm  3nex4.pgm  3nex4.yaml
bwi_orchestration_maps/scripts/: produce_map_doors_locations.py
bwi_orchestration_maps/sketchup/: 3nex4.skp
bwi_orchestration_maps/worlds/: 3nex4.world
bwi_orchestration_rapps/: CMakeLists.txt  package.xml
bwi_orchestration_rapps/launch/: door_handler.launch  logical_nav.launch
bwi_orchestration_rapps/rapps/: door_handler.interface  door_handler.rapp  logical_nav.interface  logical_nav.rapp  logical_nav_gui.interface  logical_nav_gui.launch  logical_nav_gui.rapp  nav.interface  nav.launch  nav.rapp  nav_gui.interface  nav_gui.launch  nav_gui.rapp
orc_interface/: CMakeLists.txt  package.xml  setup.py
orc_interface/launch/: environment.launch  interface.launch
orc_interface/scripts/: interface  send
orc_interface/src/orc_interface/: __init__.py  comms.py  list_interface.py  location_interface.py  message.py  move_interface.py  server.py
